--- a/dev/scss/blocks/contacto.scss
+++ b/dev/scss/blocks/contacto.scss
@@ -10,10 +10,10 @@
   margin: 0 auto 1em;
   &__item {
     width: 80px;
-    margin: 0 1em;
+    margin: 0 .5em;
   }
 }
 
 .leyenda {
-  margin: 0 1em;
+  margin: 1em;
 }
