--- a/dev/templates/template.pug
+++ b/dev/templates/template.pug
@@ -6,6 +6,7 @@ html
     meta(charset="utf-8")
     block head
       title= page_title + " | " + page
+      meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
       each link in css
         link(rel="stylesheet" href='css/' + link)
   body
