--- a/dev/blocks/footer.pug
+++ b/dev/blocks/footer.pug
@@ -1,5 +1,6 @@
-footer.footer
-  h1.page__title.footer__name #{page}
-  .datos
-    p.datos__item #{location}
-    p.datos__item #{email}
+.foo
+  footer.footer.max
+    h1.page__title.footer__name #{page}
+    .datos
+      p.datos__item #{location}
+      p.datos__item #{email}
