--- a/dev/blocks/header.pug
+++ b/dev/blocks/header.pug
@@ -1,8 +1,12 @@
-header.header
-  a.page_home(href="/"): h1.page__title #{page}
-  nav.menu
-    each item in paginas
-      if item === "inicio"
-        a.menu__item(href="/") #{item}
-      else
-        a.menu__item(href=item + ".html") #{item}
+.cabecera
+  .max
+    header.header
+      a.page_home(href="/"): h1.page__title #{page}
+      input.dn(id="GPM" type="checkbox")
+      label.btn_menu(for="GPM")
+      nav#menu.menu
+        each item in paginas
+          if item === "inicio"
+            a.menu__item(href="/") #{item}
+          else
+            a.menu__item(href=item + ".html") #{item}
