--- a/dev/pug/destinos.pug
+++ b/dev/pug/destinos.pug
@@ -4,7 +4,7 @@ block append config
   - page_title = "Destinos";
 
 block destinos_elegidos
-  .destinos_elegidos
+  .destinos_elegidos.max
     h1.destinos__title DESTINOS DISPONIBLES
     .destinos__item
       img.destinos__img(src="/res/destinos/destino1.jpg", alt="Imagen Ejemplo")
@@ -34,9 +34,10 @@ block destinos_elegidos
         a.destinos__button(href="#") Comprar
 
 block opcion
-  .banner__opcion
-    img.banner__opcion__img(src="/res/destinos/elegir.jpg", alt="Mapa")
-    .banner__texto
-      h1.banner__opcion__title ELIGE TU DESTINO, NOSOTROS TE LLEVAMOS
-      p.banner__opcion__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac tincidunt ex. Cras venenatis, mauris a dignissim vulputate, ex risus hendrerit sapien, sed dignissim mi.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac tincidunt ex. Cras venenatis, mauris a dignissim vulputate, ex risus hendrerit sapien, sed dignissim mi.
-      a.banner__opcion__btn(href="#") BUSCAR DESTINO
+  .opcionn
+    .banner__opcion.max
+        img.banner__opcion__img(src="/res/destinos/elegir.jpg", alt="Mapa")
+        .banner__texto
+          h1.banner__opcion__title ELIGE TU DESTINO, NOSOTROS TE LLEVAMOS
+          p.banner__opcion__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac tincidunt ex. Cras venenatis, mauris a dignissim vulputate, ex risus hendrerit sapien, sed dignissim mi.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac tincidunt ex. Cras venenatis, mauris a dignissim vulputate, ex risus hendrerit sapien, sed dignissim mi.
+          a.banner__opcion__btn(href="#") BUSCAR DESTINO
