--- a/dev/scss/blocks/nosotros.scss
+++ b/dev/scss/blocks/nosotros.scss
@@ -4,12 +4,15 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
+  
   &__item {
     width: 25%;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     background: $c-principal;
     padding: 1em;
+    margin-top: 1em;
     img {
       width: 150px;
       margin: 0 auto;
@@ -19,6 +22,7 @@
     color: #FFF;
     text-align: center;
     margin: .5em 0;
+    font-size: 1.5em;
   }
   &__text {
     color: #FFF;
@@ -27,18 +31,24 @@
   &__button {
     align-self: flex-end;
     display: table;
-    width: 50%;
     background: #FFF;
     color: #000;
     text-align: center;
     margin: auto auto 0;
     text-decoration: none;
     padding: .5em 1em;
-    font-size: 1.125rem;
+    font-size: 1rem;
     transition: all .3s ease-out;
     &:hover {
       color: #FFF;
       background: $c-principal;
+    }
+  }
+  @media screen and (max-width: 640px){
+    flex-direction: column;
+    align-items: center;
+    &__item {
+      width: 100%;
     }
   }
 }
