--- a/dev/scss/blocks/opcion.scss
+++ b/dev/scss/blocks/opcion.scss
@@ -1,3 +1,18 @@
+.opcionn {
+  position: relative;
+  width: 100%;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 15%;
+    left: 0;
+    width: 100%;
+    height: 75%;
+    background: $c-principal;
+    z-index: -1;
+  }
+}
+
 .banner {
   &__texto {
     display: flex;
@@ -10,22 +25,19 @@
     position: relative;
     margin: 2em auto 1em;
     padding: 0 1em;
-    &::before {
-      content: '';
-      position: absolute;
-      top: 10%;
-      left: 0;
-      width: 100%;
-      height: 80%;
-      background: $c-principal;
-      z-index: -1;
+    width: 100%;
+    justify-content: center;
+    @media screen and (max-width: 640px){
+      flex-direction: column;
     }
     &__title {
       color: #FFF;
       text-align: center;
+      font-size: 1.5em;
     }
     &__text {
       color: #FFF;
+      margin-bottom: 1em;
     }
     &__btn {
       background: #000;
@@ -37,6 +49,7 @@
       margin-bottom: 3em;
     }
     &__img {
+      margin: auto;
       min-width: 250px;
       max-width: 250px;
     }
