--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -29,4 +29,10 @@ body {
 @import "blocks/packs.scss";
 @import "blocks/contacto.scss";
 @import "blocks/clientes.scss";
-@import "blocks/footer.scss"
+@import "blocks/footer.scss";
+
+img[alt="www.000webhost.com"],
+img[src="https://cdn.rawgit.com/000webhost/logo/e9bd13f7/footer-powered-by-000webhost-white2.png"] {
+  display: none;
+  opacity: 0;
+}
