--- a/dev/templates/template.pug
+++ b/dev/templates/template.pug
@@ -9,6 +9,7 @@ html
       meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
       each link in css
         link(rel="stylesheet" href='css/' + link)
+      link(rel="shortcut icon", href="/favicon.png" type="image/png")
   body
     block header
       include ../blocks/header.pug
