--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -20,6 +20,9 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+img {
+  height: 100%;
+}
 @import "blocks/variables.scss";
 @import "blocks/header.scss";
 @import "blocks/banner.scss";
